# bartholomuegh

./: .gitignore  Cargo.toml  README.md  bartholomuegh.d.ts  bartholomuegh.js  barty.d.ts  barty.js  index.html
.VSCodeCounter/2023-06-16_23-46-22/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/: blackbody.wgsl  kerr.wgsl  noise.wgsl  schwarzschild.wgsl  shader.wgsl
notebooks/: doing_it_again.ipynb  expressions.py  kerr.ipynb  kerr_blackhole.py  kerr_brute_force.ipynb  kerr_code_gen.ipynb  kerr_derivatives.ipynb  kerr_integration.ipynb  notebook.ipynb  rust_kerr.ipynb  script.py
notebooks/.ipynb_checkpoints/: kerr-checkpoint.ipynb  kerr_integration-checkpoint.ipynb
src/: Untitled-1.ipynb  character.rs  main.rs  ui.rs
src/render_pipeline/: general.rs  mod.rs
src/render_pipeline/common/: mod.rs
src/render_pipeline/kerr_pass/: mod.rs  node.rs
src/render_pipeline/main_pass/: mod.rs  node.rs
src/render_pipeline/schwarzschild_pass/: mod.rs  node.rs
web/: barty_bg.wasm.d.ts  index.html
