[package]
name = "bartholomuegh"
version = "0.1.0"
edition = "2021"
default-run = "bartholomuegh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18"
bevy_math = "0.10.1"
plotters = "0.3.4"
bevy_mod_debugdump = "0.7"